CodeSamples/Kubernetes/Ingress/netflix/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netflix
spec:
  type: LoadBalancer
  selector:
    app: netflix
  ports:
  - port: 80
    targetPort: 80
