CodeSamples/Kubernetes/Ingress/netflix/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix-ingress
spec: 
  ingressClassName: azure-application-gateway
  rules:
  - host: netflix-new.sanjay.business
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: netflix
            port: 
              number: 80
